api extended for customer and project CRUD
