# src/main/java/de/shnyder/moose/customer/domain/model/BaseCustomerDataDAO.java
@@ -1,0 +1,51 @@
+package de.shnyder.moose.customer.domain.model;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import javax.validation.constraints.NotNull;
+
+/**
+ * CustomerDAO
+ */
+@Entity
+@Table(name = "BaseCustomerData")
+public class BaseCustomerDataDAO {
+
+	@Id
+	@GeneratedValue(strategy = GenerationType.AUTO)
+	private long id;
+	
+	@NotNull
+	protected String customername;
+
+	/**
+	 * @return the customername
+	 */
+	public String getCustomername() {
+		return customername;
+	}
+
+	/**
+	 * @param customername the customername to set
+	 */
+	public void setCustomername(String customername) {
+		this.customername = customername;
+	}
+
+	/**
+	 * @return the id
+	 */
+	public long getId() {
+		return id;
+	}
+
+	/**
+	 * @param id the id to set
+	 */
+	public void setId(long id) {
+		this.id = id;
+	}
+}
