# src/main/java/de/shnyder/moose/customer/domain/model/CustomerDataRepository.java
@@ -1,0 +1,12 @@
+package de.shnyder.moose.customer.domain.model;
+
+import org.springframework.data.repository.CrudRepository;
+
+/**
+ * CustomerDataRepository
+ */
+public interface CustomerDataRepository extends CrudRepository<BaseCustomerDataDAO, Long> {
+
+	BaseCustomerDataDAO findByCustomername(String customername);
+	
+}
