# src/main/java/de/shnyder/moose/project/domain/model/BaseProjectDataDAO.java
@@ -1,0 +1,51 @@
+package de.shnyder.moose.project.domain.model;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import javax.validation.constraints.NotNull;
+
+/**
+ * ProjectDAO
+ */
+@Entity
+@Table(name = "BaseProjectData")
+public class BaseProjectDataDAO {
+
+	@Id
+	@GeneratedValue(strategy = GenerationType.AUTO)
+	private long id;
+	
+	@NotNull
+	protected String projectname;
+
+	/**
+	 * @return the projectname
+	 */
+	public String getProjectname() {
+		return projectname;
+	}
+
+	/**
+	 * @param projectname the projectname to set
+	 */
+	public void setProjectname(String projectname) {
+		this.projectname = projectname;
+	}
+
+	/**
+	 * @return the id
+	 */
+	public long getId() {
+		return id;
+	}
+
+	/**
+	 * @param id the id to set
+	 */
+	public void setId(long id) {
+		this.id = id;
+	}
+}
