# src/main/java/de/shnyder/moose/project/domain/model/ProjectDataRepository.java
@@ -1,0 +1,12 @@
+package de.shnyder.moose.project.domain.model;
+
+import org.springframework.data.repository.CrudRepository;
+
+/**
+ * ProjectDataRepository
+ */
+public interface ProjectDataRepository extends CrudRepository<BaseProjectDataDAO, Long> {
+
+	BaseProjectDataDAO findByProjectname(String projectname);
+	
+}
